1.Max Min input change on UI 2.Rating is not showing on google attarctions any more...can you fix it 3.The theme selection change that Ravi has suggested 4.Feedback Page change Email Address

--- a/TrippismUI/app/Styles/css/Style.css
+++ b/TrippismUI/app/Styles/css/Style.css
@@ -348,6 +348,7 @@ input.form-control[type="number"]{ padding-right:15px;}
 .overview-weather-farerange{ padding:0; width:100%; border-left:0px;}
 .list-line .overview-weather-content{ padding:0;}
 .list-line .overview-weather-content p{ position:static;}
+.destination-tab .tab-content {height: 135px;margin-bottom: 15px;overflow-x: hidden;overflow-y: auto;padding-right: 15px;}
 
 }
 @media only screen and (max-width: 330px) {
